--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -39,28 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "3\n",
-      "5\n",
-      "7\n",
-      "11\n",
-      "13\n",
-      "17\n",
-      "19\n",
-      "23\n",
-      "29\n",
-      "31\n",
-      "37\n",
-      "41\n",
-      "43\n",
-      "47\n"
+      "15\n",
+      "70\n"
      ]
     }
    ],
@@ -619,6 +606,538 @@
     "        print(\"ACCEPTED\")\n",
     "    else:\n",
     "        print(\"CROP IT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 30.08.2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### create a function to find a factorial of a number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    c=1\n",
+    "    for i in range(1,n):\n",
+    "        c=c*i\n",
+    "    print(c)\n",
+    "fact(6)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### function to print all number divisible by 6 and not a factor of 100 in given range(lb,ub)inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "100\n",
+      "60\n",
+      "66\n",
+      "72\n",
+      "78\n",
+      "84\n",
+      "90\n",
+      "96\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    a=int(input())\n",
+    "    n=int(input())\n",
+    "    for i in range(a,n+1):\n",
+    "        if((i%6==0)and(100%i!=0)):\n",
+    "            print(i)\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "66\n",
+      "72\n",
+      "78\n",
+      "84\n",
+      "90\n",
+      "96\n",
+      "102\n",
+      "108\n",
+      "114\n",
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(a,n):\n",
+    "    for i in range(a,n+1):\n",
+    "        if((i%6==0)and(100%i)):\n",
+    "            print(i)\n",
+    "fun(60,120)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### function to find the average of cubes of all the even numbers in a given range(lb,ub)inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "360.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(a,n):\n",
+    "    sum=0\n",
+    "    c=0\n",
+    "    for i in range(a,n+1):\n",
+    "        if(i%2==0):\n",
+    "            sum+=(i**3)\n",
+    "            c=c+1\n",
+    "    print(sum/c)\n",
+    "    \n",
+    "fun(1,10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### function to generate list of factors for a given number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(n):\n",
+    "    for i in range(1,n+1):\n",
+    "        if(n%i==0):\n",
+    "            print(i)\n",
+    "fun(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### function to calculate the number is prime are not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a number17\n",
+      "17 is a prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(i):\n",
+    "    flag=0\n",
+    "    for j in range(2,int(i**(1/2))+1):\n",
+    "        if(i%j==0):\n",
+    "            flag+=1\n",
+    "    if(flag==0):\n",
+    "        print(i,\"is a prime\")  \n",
+    "    else:\n",
+    "        print(i,\" is not a prime\")\n",
+    "\n",
+    "n=int(input(\"enter a number\"))\n",
+    "\n",
+    "fun(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### function to calculate average of first n numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a number17\n",
+      "25.88235294117647\n"
+     ]
+    }
+   ],
+   "source": [
+    "def firstnprime(n):\n",
+    "    i=1\n",
+    "    x=2\n",
+    "    s=0\n",
+    "    flag=0\n",
+    "    while i<=n:\n",
+    "        for j in range(2,x):\n",
+    "            if(x%j==0):\n",
+    "                flag+=1\n",
+    "        if(flag==0):\n",
+    "            i+=1\n",
+    "            s+=x\n",
+    "            x+=1\n",
+    "        else:\n",
+    "            x=x+1\n",
+    "            flag=0\n",
+    "    return s/n\n",
+    "n=int(input('enter a number'))\n",
+    "print(firstnprime(n))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def perfectnum(l,u):\n",
+    "    s=0\n",
+    "    for i in range(l,u+1):\n",
+    "        for j in range(1,i):\n",
+    "            if(i%j==0):\n",
+    "                s+=j\n",
+    "        if(s==i):\n",
+    "            print(i)\n",
+    "        s=0\n",
+    "a=int(input())\n",
+    "b=int(input())\n",
+    "perfectnum(a,b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### find the sumof prime numbers from 10 to 30 using functions both 10 and 30 are inclusive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(a,b):\n",
+    "    for i in range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-9-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### task 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### find highest scored person name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stu=[['sai',10,20,30],['lakshmi',20,30,40],['raju',20,30,40],['sri',10,20,30],['rani',10,30,40]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lakshmi', 'raju']\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=0\n",
+    "j=[]\n",
+    "for i in stu:\n",
+    "    m=i[1]+i[2]+i[3]\n",
+    "    if(b<m):\n",
+    "        b=m\n",
+    "        j=[i[0]]\n",
+    "    elif(m==b):\n",
+    "        j.append(i[0])\n",
+    "print(j)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### task2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stud=[[1,30,40],[30,40,100],[2,50,10]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 30, 40], [30, 40, 100], [2, 50, 10]]\n",
+      "[[2, 50, 10], [1, 30, 40], [30, 40, 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#    [rno,sub1,sub2]\n",
+    "\n",
+    "print(stud)\n",
+    "for i in stud:\n",
+    "    i.reverse()\n",
+    "stud.sort()\n",
+    "for i in stud:\n",
+    "    i.reverse()\n",
+    "print(stud)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### task3\n",
+    "### find the sum of digits\n",
+    "### find the number of characters (a-z and A-Z)\n",
+    "### find number of digits\n",
+    "### find average of digits\n",
+    "### find lucky number(example 1234=1+2+3+4=10=1+0=1(lucky number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumOfNum(data):\n",
+    "    s=0\n",
+    "    for i in data:\n",
+    "        if i.isdigit():\n",
+    "            s+=int(i)\n",
+    "    return s\n",
+    "data='sairam 123 lakshmi'\n",
+    "print(sumOfNum(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=0\n",
+    "for i in data:\n",
+    "    if i.isalpha():\n",
+    "        s+=1\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=0\n",
+    "for i in data:\n",
+    "    if i.isdigit():\n",
+    "        s+=1\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=0\n",
+    "c=0\n",
+    "for i in data:\n",
+    "    if i.isdigit():\n",
+    "        s+=int(i)\n",
+    "        c+=1\n",
+    "print(s/c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lucky number is   1\n"
+     ]
+    }
+   ],
+   "source": [
+    "data='sairam 12345553 lakshmi'\n",
+    "while len(data)!=1:\n",
+    "    data=str(sumOfNum(data))\n",
+    "print('lucky number is  ',data)"
    ]
   },
   {
