--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1149,9 +1149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9912116547\n",
+      "valid\n"
+     ]
+    }
+   ],
    "source": [
     "# 1 . create function for mobile number validator\n",
     "def numval(n):\n",
@@ -1166,10 +1175,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A,SRIRAM\n",
+      "valid\n"
+     ]
+    }
+   ],
+   "source": [
+    "##name validator (A.sairam,sairam.A,A Sairam,sairam A,sairam)\n",
+    "def nameValid(name):\n",
+    "   import re\n",
+    "   if re.search('^[a-zA-Z]*.[a-zA-Z]+$',name):\n",
+    "       return 'valid'\n",
+    "   else:\n",
+    "       return 'invalid'\n",
+    "\n",
+    "name=input()\n",
+    "print(nameValid(name))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def valid(a,b):\n",
+    "  import re\n",
+    "  if re.search(a,b):\n",
+    "      return 'True'\n",
+    "  else:\n",
+    "      return 'False'\n",
+    "print(valid('^\\D{10}$','abdef@#des'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5-09-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### copying the data from one file to another file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fh = open('book.txt','r')\n",
+    "fh1=open(\"book1.txt\",'a')\n",
+    "data=fh.read()\n",
+    "fh1.write(data)\n",
+    "fh1.close()\n",
+    "\n",
+    "fh.close()"
+   ]
   }
  ],
  "metadata": {
