--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1251,6 +1251,416 @@
     "\n",
     "fh.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  task2\n",
+    "#### 1.find the number of lines in 'book.txt'file\n",
+    "#### 2.print 3rd line in the file\n",
+    "#### 3.print last character  in the 3rd line\n",
+    "#### 4.create function to return the data of given line number\n",
+    "#### 5.create function to find the number of characters in file\n",
+    "#### 6.create function to count the occurance of the given character\n",
+    "#### 7.create function to find the sum of digits in the file\n",
+    "#### 8.create function to replace the all old world with new word in file\n",
+    "#### 9.find number of words in file\n",
+    "#### 10.create function to remove the given line number in file\n",
+    "#### 11.create function to remove the given word in file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### PROGRAM 1\n",
+    "fh = open('book.txt','r')\n",
+    "c=0\n",
+    "for i in fh:\n",
+    "    c=c+1\n",
+    "print(c)\n",
+    "    \n",
+    "fh.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line#\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### PROGRAM 2\n",
+    "fh = open('book.txt','r')\n",
+    "c=0\n",
+    "for i in fh:\n",
+    "    c=c+1\n",
+    "    if(c==3):\n",
+    "        print(i)\n",
+    "    \n",
+    "fh.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### PROGRAM 3#####\n",
+    "fh = open('book.txt','r')\n",
+    "c=0\n",
+    "for i in fh:\n",
+    "    c=c+1\n",
+    "    if(c==3):\n",
+    "        print(i[-2])\n",
+    "    \n",
+    "fh.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "book.txt\n",
+      "3\n",
+      "line#\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### PROGRAM 4\n",
+    "def fun(name,n):\n",
+    "    fh = open(name,'r')\n",
+    "    c=0\n",
+    "    for i in fh:\n",
+    "        c=c+1\n",
+    "        if(c==n):\n",
+    "            print(i)\n",
+    "\n",
+    "    fh.close()\n",
+    "name=input()\n",
+    "n=int(input())\n",
+    "fun(name,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "book.txt\n",
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "###PROGRAM 5\n",
+    "def fun(fname):\n",
+    "    fh = open(fname,'r')\n",
+    "    data=fh.read()\n",
+    "    print(len(data))\n",
+    "    fh.close()\n",
+    "fname=input()\n",
+    "fun(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "book.txt\n",
+      "i\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PROGRAM 6\n",
+    "def fun(fname,n):\n",
+    "    fh = open(fname,'r')\n",
+    "    data=fh.read()\n",
+    "    c=0\n",
+    "    for i in data:\n",
+    "        if(i==n):\n",
+    "            c=c+1\n",
+    "    print(c)\n",
+    "    fh.close()\n",
+    "fname=input()\n",
+    "n=input()\n",
+    "fun(fname,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "book.txt\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "##### PROGRAM 7\n",
+    "def sumo(name):\n",
+    "    fh = open(name,'r')\n",
+    "    data=fh.read()\n",
+    "    s=0\n",
+    "    for i in data:\n",
+    "        if i.isdigit():\n",
+    "            s=s+int(i)\n",
+    "    print(s)\n",
+    "\n",
+    "name=input()\n",
+    "sumo(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a='siti'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### PROGRAM 8\n",
+    "def siri(fname,n,m):\n",
+    "    fh = open(fname,'r')\n",
+    "    data = fh.read()\n",
+    "    data = data.replace(n,m)\n",
+    "    fh.close()\n",
+    "    fh=open(fname,'w')\n",
+    "    fh.write(data)\n",
+    "    fh.close\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "siri('book.txt','row','line')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eeee.txt\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "### PROGRAM 9\n",
+    "def su(name):\n",
+    "    fh = open(name,'r')\n",
+    "    data=fh.read()\n",
+    "    data=data.split(\"\\n\")\n",
+    "    data=str(data).split(\" \")\n",
+    "    print(len(data))\n",
+    "\n",
+    "name=input()\n",
+    "su(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PROGRAM 10\n",
+    "def removeLine(fname,num):\n",
+    "   f=open(fname,'r')\n",
+    "   data=f.readlines()\n",
+    "   data=data[num]\n",
+    "   siri(fname,data,'')\n",
+    "   return\n",
+    "\n",
+    "removeLine('book.txt',-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 11th program\n",
+    "siri('book.txt','line','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
