--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1649,11 +1649,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### task 3\n",
+    "### adding the subject marks in the given file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fh_i=open('www.txt','r')\n",
+    "fh_o=open('r.txt','w')\n",
+    "count=0\n",
+    "for line in fh_i:\n",
+    "   count+=1\n",
+    "   if count==1:\n",
+    "       fh_o.write(line.strip()+'\\ttotal\\n')\n",
+    "   else:\n",
+    "       marks_list=line.strip().split()[2:]\n",
+    "       newMarks=[]\n",
+    "       for each in marks_list:\n",
+    "           newMarks.append(int(each))\n",
+    "       total_marks=sum(newMarks)\n",
+    "       fh_o.write(line.strip()+'\\t'+str(total_marks)+'\\n')\n",
+    "fh_i.close()\n",
+    "fh_o.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### sort the data in the ascending order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fh_i=open('www.txt','r')\n",
+    "fh_o=open('r.txt','w')\n",
+    "count=0\n",
+    "rows=[]\n",
+    "for line in fh_i:\n",
+    "   count+=1\n",
+    "   if count==1:\n",
+    "       fh_o.write(line.strip()+'\\ttotal\\n')\n",
+    "   else:\n",
+    "       marks_list=line.strip().split()[2:]\n",
+    "       newMarks=[]\n",
+    "       for each in marks_list:\n",
+    "           newMarks.append(int(each))\n",
+    "       total_marks=sum(newMarks)\n",
+    "       row=line.strip()+'\\t'+str(total_marks)+'\\n'\n",
+    "       rows.append([total_marks,row])\n",
+    "rows.sort()\n",
+    "for row in rows:\n",
+    "   fh_o.write(row[1])\n",
+    "\n",
+    "      \n",
+    "fh_i.close()\n",
+    "fh_o.close()\n"
+   ]
   },
   {
    "cell_type": "code",
